--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   },
   "dependencies": {
     "@google/maps": "^0.3.1",
+    "body-parser": "^1.17.1",
     "express": "^4.14.1",
     "google-auth-library": "^0.10.0",
     "googleapis": "^18.0.0",
     "node-fetch": "^1.6.3",
+    "node-gmail-api": "^0.6.0",
     "oauth": "^0.9.15",
+    "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0",
     "requestify": "^0.2.5",
     "weather-js": "^2.0.0"
   }
